@@ -1,7 +1,7 @@
 Package: phuse
 Type: Package
 Title: Web Application Framework for 'PhUSE' Scripts
-Version: 0.1.5
+Version: 0.1.6
 Author: Hanming Tu [aut, cre]
 Authors@R: c(
   person("Hanming", "Tu", email = "hanming.tu@gmail.com",role = c("aut", "cre"))
@@ -17,8 +17,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
 Suggests: testthat
-Imports: yaml, shiny, RCurl, git2r, rlist
+Imports: yaml, shiny, RCurl, git2r, rlist, httr
 NeedsCompilation: no
-Packaged: 2018-01-03 18:57:25 UTC; htu
+Packaged: 2018-09-09 01:09:24 UTC; htu
 Repository: CRAN
-Date/Publication: 2018-01-05 13:54:25 UTC
+Date/Publication: 2018-09-20 05:00:03 UTC
