@@ -1,27 +1,27 @@
-b6789a12780f3f175cfdc7c22f302624 *DESCRIPTION
+c075fab947ec925b67cbbb337a6e6b01 *DESCRIPTION
 f12a96a594bc30eb4f15047f8625ca5d *LICENSE
-f6fef24c846da8d9c667d56dea30c713 *NAMESPACE
-9c975c5a5a6ec215d0b008744da668d5 *NEWS
+67942be3024dee59665cd734d9d548f4 *NAMESPACE
+b357b7e9d156d716859a506613642517 *NEWS
 e366413debb2c8aa2a066dd5c0115419 *NEWS.md
-6f748770298c96e060ffbab1de2b97a6 *R/build_inputs.R
-421662d1c1f3186b16cb7de367319a6c *R/build_script_df.R
+8092a2532b2bee726f95763abbffac16 *R/build_inputs.R
+7a4fad77e742f2c1c4e676a5e302bda6 *R/build_script_df.R
 9f726bc695b8a4a6d48839c1a12a958f *R/chk_workdir.R
 9b2f76327aeed69e4dcadbc49f9d1ec9 *R/create_dir.R
 8f9921efb828283b303f5ae889a3b9d3 *R/crt_workdir.R
 d58ef6c2f119cb8ae57b2b6ade398238 *R/cvt_class2df.R
-1feb52c5daa6ea4836797e528b13617c *R/cvt_list2df.R
-f03b9befd433079c21b31784ecf2146a *R/download_fns.R
+b1d131c1050ecd876773fc8db916320e *R/cvt_list2df.R
+756b11e36f354579d368ef60ea8b4eb3 *R/download_fns.R
 167486b0f27340c1a091fcf4e0bfe555 *R/download_script.R
 d652ef714ea3ab38409d5045066a8020 *R/download_script_files.R
 462febe62e4ddc9c0e42a3fbcaa0df92 *R/extract_fns.R
-33914ad709fffac1602ceab14345b277 *R/get_inputs.R
-426c8b2ee26f234d10b9e47f1fc068e3 *R/get_yml_inputs.R
+17ba067538f532ce648697c2ce63a1d4 *R/get_inputs.R
+91cd267af041b7e912a951cbe94e4aa2 *R/get_yml_inputs.R
 e111bb870aa6527198ac1f29400f478a *R/init_cfg.R
 c7b2524a801e6c18611c71edb3c2dc58 *R/merge_lists.R
-21950c702daf41ab0a9c828cbb9080c9 *R/read_yml.R
+129d168e2dd1477b0a1679e6c6d6a29c *R/read_yml.R
 fd7920668ddee2ab62406246e40aa60e *R/resolve.R
 2c551bf753f2f180f03963534811f67f *R/run_example.R
-f177e06d5e3f00d37e9f5a7fad3224a6 *R/start_phuse.R
+b0cd2127c03adf23dc887532611fc0e6 *R/start_phuse.R
 796cbd876bf29a36b388f8612e7e7a46 *inst/docs/index.html
 567677d9a8c7be5f02f306339b329124 *inst/examples/01_html/DESCRIPTION
 1a43e395464bfa0650827d8e232200f8 *inst/examples/01_html/Readme.md
@@ -34,7 +34,7 @@ c5f5d83fe5e4d108e57582178955aafd *inst/examples/01_html/www/logo.html
 e5101128bca44688980a28ef78d2bae1 *inst/examples/01_html/www/top.html
 7b7e1954a204702dec531e3a4929cf50 *inst/examples/02_display/DESCRIPTION
 5e5cc1ec5d9c560e526a73d48327aa47 *inst/examples/02_display/Readme.md
-20b68e505a6be3b659a393cc361fb91d *inst/examples/02_display/app.R
+a10c062e8589851a86044f4150d61942 *inst/examples/02_display/app.R
 a6531c088fc45401391d26b8f7b38d18 *inst/examples/02_display/www/Draw_Dist_R.yml
 3a2bdaa320c0c7f50ede248d8e55c1ac *inst/examples/02_display/www/links.txt
 77c79f186ac668693ad39b69f51e5791 *inst/examples/02_display/www/phuse-scripts_yml.csv
@@ -46,9 +46,9 @@ ede05d19272829491a676511bf8dac84 *inst/examples/03_showenv/app.R
 9b85523e8213ca52fab2bf9736bd8e73 *inst/examples/03_showenv/draw_hist_R.yml
 799227bfd66d6de3b6cc17a2f5358329 *inst/examples/04_merge/DESCRIPTION
 1406350bae213d4cd2f077e67f7eec9e *inst/examples/04_merge/Readme.md
-64c37fc934e0101b6e88179e41cafa0d *inst/examples/04_merge/app.R
-4ca4f348270712066cb10dae4e2fec07 *inst/examples/04_merge/metadata_example_loc.yml
-77975e42690ef96ee9df4dc40c12094c *inst/examples/04_merge/metadata_example_rep.yml
+d086228c3f9ff77ad30509c005d4b8ab *inst/examples/04_merge/app.R
+831d8839a21888c06bb40bcf7fa9e27a *inst/examples/04_merge/metadata_example_loc.yml
+c7e06698fbc4418fa230f3cfeff2c89d *inst/examples/04_merge/metadata_example_rep.yml
 1ef0b37fb31b3b0d8bb654478bed846d *inst/examples/05_d3/DESCRIPTION
 efc9acfdf7c6185b440f17225426b8e1 *inst/examples/05_d3/app.R
 db0ce4bfdb811f27e16b6ecb0d1f1981 *inst/examples/05_d3/www/datatips.csv
@@ -60,13 +60,13 @@ f3afbc6d76dc6ca99f19bcef0fca2d7c *inst/examples/05_d3/www/test.nb.html
 c3959238d297024a10fcbf63e97d0c6d *inst/tests/testthat.R
 9c01e3bd48d12431fb134b2fc42f4b3d *inst/tests/testthat/rock.csv
 e6b22811d6e2ecccaeef4855f859bac8 *inst/tests/testthat/test_check.R
+e0b1ba93cf9575d647da59a116cd52e0 *man/build_inputs.Rd
 7c8ebb0733bbd73521746bcaca20ad11 *man/build_script_df.Rd
-8464bb879e151c359c685a661057fd86 *man/buiuld_inputs.Rd
 66a6a9c2573290b8232af6f8c907ae04 *man/chk_workdir.Rd
 9d5d206418285289f709d87082aec9e8 *man/create_dir.Rd
 ccbc7f2c28c30252df9dbce75ac1f61c *man/crt_workdir.Rd
 e8361fe7987d1164f607eac0df26ccb5 *man/cvt_class2df.Rd
-ba281b82719ad917852c06cbaafdc6c7 *man/cvt_list2df.Rd
+9d8a36feff49870c486de91a49c55b0c *man/cvt_list2df.Rd
 c3bdfa1450ec1210438eee89e504ce4a *man/download_fns.Rd
 5b9489527cc195da1c984b4926be9a56 *man/download_script.Rd
 049d8555d2e4943f2dd356f572a92c6c *man/download_script_files.Rd
@@ -78,4 +78,5 @@ dc9b9426a18e5f614070be1d2b2584db *man/get_yml_inputs.Rd
 22fe02c636eaf74e9d55418df6e9ec4b *man/read_yml.Rd
 12402402f302f9f69feaa89db942c32d *man/resolve.Rd
 ace1aca6330096c093e134b215bc8a28 *man/run_example.Rd
-a3c42f2a7111a9c2445f4bff11a62c57 *man/start_phuse.Rd
+11d15ae9e00539b12310216f9fe01937 *man/start_phuse.Rd
+7a8779ce1155adea1bf758668efdc4e8 *man/url.exists.Rd
