@@ -19,10 +19,13 @@ export(read_yml)
 export(resolve)
 export(run_example)
 export(start_phuse)
+export(url.exists)
+importFrom(RCurl,basicTextGatherer)
 importFrom(RCurl,url.exists)
 importFrom(git2r,clone)
 importFrom(git2r,init)
 importFrom(git2r,is_empty)
+importFrom(httr,GET)
 importFrom(rlist,list.merge)
 importFrom(stats,setNames)
 importFrom(utils,download.file)
