@@ -1,7 +1,6 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/build_inputs.R
-\name{buiuld_inputs}
-\alias{buiuld_inputs}
+\name{build_inputs}
 \alias{build_inputs}
 \title{Build Inputs from Script Metadata for Phuse Web Framework}
 \usage{
@@ -17,11 +16,13 @@ R shiny code for providing inputs to the script
 Build R shiny code for Phuse Web Apps
 }
 \examples{
+\dontrun{
   a <- "https://github.com/phuse-org/phuse-scripts/raw/master"
   b <- "development/R/scripts"
   c <- "Draw_Dist2_R.yml"
   f1 <- paste(a,b,c, sep = '/')
   r1 <- build_inputs(f1)
+}
 }
 \author{
 Hanming Tu
